--- a/AzureMediaService/packages.config
+++ b/AzureMediaService/packages.config
@@ -15,12 +15,57 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
+  <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.7" targetFramework="net461" />
+  <package id="Microsoft.Data.Edm" version="5.8.2" targetFramework="net461" />
+  <package id="Microsoft.Data.OData" version="5.8.2" targetFramework="net461" />
+  <package id="Microsoft.Data.Services.Client" version="5.8.2" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="3.13.1" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Protocol.Extensions" version="1.0.2.205111437" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.1.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
+  <package id="Microsoft.Win32.Primitives" version="4.0.1" targetFramework="net461" />
+  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.3" targetFramework="net461" />
   <package id="Modernizr" version="2.6.2" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net461" />
+  <package id="System.Collections" version="4.0.11" targetFramework="net461" />
+  <package id="System.Collections.Concurrent" version="4.0.12" targetFramework="net461" />
+  <package id="System.ComponentModel.EventBasedAsync" version="4.0.11" targetFramework="net461" />
+  <package id="System.Diagnostics.Debug" version="4.0.11" targetFramework="net461" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.0.0" targetFramework="net461" />
+  <package id="System.Dynamic.Runtime" version="4.0.0" targetFramework="net461" />
+  <package id="System.Globalization" version="4.0.11" targetFramework="net461" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="4.0.2.205111437" targetFramework="net461" />
+  <package id="System.IO" version="4.1.0" targetFramework="net461" />
+  <package id="System.Linq" version="4.1.0" targetFramework="net461" />
+  <package id="System.Linq.Queryable" version="4.0.0" targetFramework="net461" />
+  <package id="System.Net.Http" version="4.1.0" targetFramework="net461" />
+  <package id="System.Net.Primitives" version="4.0.11" targetFramework="net461" />
+  <package id="System.Net.Requests" version="4.0.11" targetFramework="net461" />
+  <package id="System.Reflection" version="4.1.0" targetFramework="net461" />
+  <package id="System.Reflection.Extensions" version="4.0.1" targetFramework="net461" />
+  <package id="System.Runtime" version="4.1.0" targetFramework="net461" />
+  <package id="System.Runtime.Extensions" version="4.1.0" targetFramework="net461" />
+  <package id="System.Runtime.InteropServices" version="4.1.0" targetFramework="net461" />
+  <package id="System.Runtime.Serialization.Json" version="4.0.2" targetFramework="net461" />
+  <package id="System.Runtime.Serialization.Primitives" version="4.1.1" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.2.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Encoding" version="4.0.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Primitives" version="4.0.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.1.0" targetFramework="net461" />
+  <package id="System.Spatial" version="5.8.2" targetFramework="net461" />
+  <package id="System.Text.Encoding" version="4.0.11" targetFramework="net461" />
+  <package id="System.Text.Encoding.Extensions" version="4.0.11" targetFramework="net461" />
+  <package id="System.Text.RegularExpressions" version="4.1.0" targetFramework="net461" />
+  <package id="System.Threading" version="4.0.11" targetFramework="net461" />
+  <package id="System.Threading.Tasks" version="4.0.11" targetFramework="net461" />
+  <package id="System.Xml.ReaderWriter" version="4.0.11" targetFramework="net461" />
+  <package id="System.Xml.XDocument" version="4.0.11" targetFramework="net461" />
+  <package id="TransientFaultHandling.Core" version="5.1.1209.1" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net461" />
+  <package id="windowsazure.mediaservices" version="4.1.0.1" targetFramework="net461" />
+  <package id="windowsazure.mediaservices.extensions" version="4.1.0.1" targetFramework="net461" />
+  <package id="WindowsAzure.Storage" version="8.6.0" targetFramework="net461" />
 </packages>
