--- a/AzureMediaService/AzureMediaService/AzureMediaService.csproj
+++ b/AzureMediaService/AzureMediaService/AzureMediaService.csproj
@@ -218,8 +218,8 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="Controllers\EncodeMediaController.cs" />
-    <Compile Include="Controllers\EncodeMediaService.cs" />
+    <Compile Include="Controllers\PlayMediaController.cs" />
+    <Compile Include="Services\EncodeMediaService.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Entities\MediaContentEntity.cs" />
     <Compile Include="Global.asax.cs">
@@ -227,6 +227,7 @@
     </Compile>
     <Compile Include="Models\MediaContentModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\MediaListService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
@@ -263,9 +264,7 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\EncodeMedia\Index.cshtml" />
-    <Content Include="Views\EncodeMedia\Delete.cshtml" />
-    <Content Include="Views\EncodeMedia\Create.cshtml" />
+    <Content Include="Views\PlayMedia\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
